# libbcrypt-cmake

./: .gitignore  CMakeLists.txt  bcrypt.c  bcrypt_test.c
